--- a/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
@@ -56,16 +56,6 @@ spec:
             {{- with .Values.applicationSet.args }}
               {{- toYaml . | nindent 12 }}
             {{- end }}
-          ports:
-            - name: http
-              containerPort: 8081
-              protocol: TCP
-            - name: metrics
-              containerPort: 8080
-              protocol: TCP
-            - name: webhook
-              containerPort: 7000
-              protocol: TCP
           env:
             {{- with .Values.applicationSet.env }}
               {{- toYaml . | nindent 12 }}
@@ -78,6 +68,32 @@ spec:
           envFrom:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          ports:
+            - name: http
+              containerPort: 8081
+              protocol: TCP
+            - name: metrics
+              containerPort: 8080
+              protocol: TCP
+            - name: webhook
+              containerPort: 7000
+              protocol: TCP
+          livenessProbe:
+            tcpSocket:
+              port: metrics
+            initialDelaySeconds: {{ .Values.applicationSet.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.applicationSet.livenessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.applicationSet.livenessProbe.timeoutSeconds }}
+            successThreshold: {{ .Values.applicationSet.livenessProbe.successThreshold }}
+            failureThreshold: {{ .Values.applicationSet.livenessProbe.failureThreshold }}
+          readinessProbe:
+            tcpSocket:
+              port: metrics
+            initialDelaySeconds: {{ .Values.applicationSet.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.applicationSet.readinessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.applicationSet.readinessProbe.timeoutSeconds }}
+            successThreshold: {{ .Values.applicationSet.readinessProbe.successThreshold }}
+            failureThreshold: {{ .Values.applicationSet.readinessProbe.failureThreshold }}
           volumeMounts:
             - mountPath: /app/config/ssh
               name: ssh-known-hosts
@@ -105,23 +121,6 @@ spec:
         {{- with .Values.applicationSet.extraContainers }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
-      volumes:
-      - name: tmp
-        emptyDir: {}
-      - name: ssh-known-hosts
-        configMap:
-          name: argocd-ssh-known-hosts-cm
-      - name: tls-certs
-        configMap:
-          name: argocd-tls-certs-cm
-      - name: gpg-keys
-        configMap:
-          name: argocd-gpg-keys-cm
-      - name: gpg-keyring
-        emptyDir: {}
-      {{- with .Values.applicationSet.volumes }}
-        {{- toYaml . | nindent 6 }}
-      {{- end }}
       {{- with .Values.applicationSet.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -134,4 +133,21 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      volumes:
+      {{- with .Values.applicationSet.volumes }}
+        {{- toYaml . | nindent 6 }}
+      {{- end }}
+      - name: ssh-known-hosts
+        configMap:
+          name: argocd-ssh-known-hosts-cm
+      - name: tls-certs
+        configMap:
+          name: argocd-tls-certs-cm
+      - name: gpg-keys
+        configMap:
+          name: argocd-gpg-keys-cm
+      - name: gpg-keyring
+        emptyDir: {}
+      - name: tmp
+        emptyDir: {}
 {{- end }}
