--- a/charts/argo-cd/templates/argocd-server/gke/backendconfig.yaml
+++ b/charts/argo-cd/templates/argocd-server/gke/backendconfig.yaml
@@ -1,11 +1,11 @@
 {{- if .Values.server.gke.backendConfig.enabled }}
-apiVersion: cloud.google.com/v1beta1
+apiVersion: {{ include "argo-cd.apiVersions.cloud-google" . }}
 kind: BackendConfig
 metadata:
   name: {{ include "argo-cd.server.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
-{{- with omit .Values.server.gke.backendConfig.spec }}
+{{- with .Values.server.gke.backendConfig.spec }}
 spec:
   {{- toYaml . | nindent 2 }}
 {{- end }}
